--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Site Index</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    h1 {
+      color: #333;
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    a {
+      text-decoration: none;
+      color: #0077cc;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>Site Pages</h1>
+  <ul>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="homepage.html">Homepage</a></li>
+    <li><a href="index.html">Index</a></li>
+    <li><a href="pricing.html">Pricing</a></li>
+    <li><a href="productpage.html">Product Page</a></li>
+    <li><a href="reg.html">Register</a></li>
+    <li><a href="testi.html">Test Page</a></li>
+    <li><a href="usecases.html">Use Cases</a></li>
+  </ul>
+</body>
+</html>
